corrigindo arquivo html,css e js e mudado layout

--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,17 @@
-body {
-  font-family: 'Roboto Mono',monospace;
+/* body {
+  font-family: 'Monotype Corsiva';
   min-height: 600px;
-  background-image: url('https://www.flirtcommunications.com/wp-content/uploads/2019/03/AI-head_dpwfp1.png');
+  background-image: url(https://sophiaofnature.files.wordpress.com/2015/11/18936069-3d-numbers-wallpaper-stock-photo.jpg);
   background-color: #000000;
   background-size: cover;
   background-position: center bottom;
   background-repeat: no-repeat;
-  color: white;
-  font-size: 18px;
 }
 
 .container {
   text-align: center;
   padding: 20px;
-  height: 100%;
-  background-color: #004ec275;
-  margin-left:25%;
-  margin-right: 25%;
+  height: 100vh;
 }
 
 .page-title {
@@ -44,8 +39,86 @@ body {
   body {
     min-height:800px;
   }
-}
-.input {
-font: normal 20pt Arial;
-width: 200px;
-}
+} */
+
+body {
+  font-family: 'Dosis', sans-serif;
+    min-height: 600px;
+    background-image: url(https://sophiaofnature.files.wordpress.com/2015/11/18936069-3d-numbers-wallpaper-stock-photo.jpg);
+    background-color: #000000;
+    background-size: cover;
+    background-position: center bottom;
+    background-repeat: no-repeat;
+  }
+  
+  .container {
+    text-align: center;
+    padding: 20px;
+    height: 100vh;
+  }
+  
+  .page-title {
+    color: white;
+    margin: 0 0 5px;
+    font-size: 70px;
+    
+  }
+  
+  .page-subtitle {
+    color: yellow;
+    margin-top: 5px;
+    font-size: 30px;
+  }
+  
+  .page-logo {
+    width: 300px;
+  }
+  
+  .alura-logo {
+    width: 40px;
+    position: absolute;
+    top: 10px;
+    right:10px;
+  }
+  
+  @media (max-height: 500px) {
+    body {
+      min-height:800px;
+    }
+  }
+  
+  .botaoC{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    height: 200px;
+    flex-direction: column;
+  
+  }
+  button{
+    
+    font-family: inherit;
+    font-size: 20px;
+    background-color: black;
+    border: solid 2px;
+    height: 57px;
+    width: 200px;
+    cursor: pointer;color: white;
+  }
+  input{
+    border: 2px solid rgb(255, 184, 195);
+    margin-top: 3px;
+    margin-bottom: 10px;
+    padding: 20px 25px;
+    
+  }
+    h2{
+    color: yellow;
+    margin-top: 10px;
+    font-size: 40px;
+  }
+  h3{
+    color: white;
+    font-size: 20px;
+  }
+
